# assbi

./: .env.example  .gitignore  README.md  ROBOFLOW_GUIDE.md  cookies.txt  main.py  pyproject.toml  requirements-core.txt  requirements-full.txt  requirements.txt
.devcontainer/: devcontainer.json
config/: config.yaml
data/: assbi.db
models/intent/: dataset.csv  metrics.json
scripts/: download_video.py  grab_annotated.py  overlay_line.py  privacy_demo.py  probe_frame.py  run_demo.py  show_dataset.py
src/assbi/: __init__.py  bi_export.py  cli.py  config.py  reporting.py
src/assbi/analytics/: __init__.py  anomaly.py  crowd.py  line_counter.py  prediction.py
src/assbi/chatbot/: __init__.py  assistant.py  intent_data.py  intent_model.py  intent_nlu.py  llm.py
src/assbi/dashboard/: __init__.py  app.py
src/assbi/detection/: __init__.py  simulation_detector.py  yolo_detector.py
src/assbi/domain/: __init__.py  geometry.py  interfaces.py  models.py
src/assbi/persistence/: __init__.py  sqlite_repository.py
src/assbi/pipeline/: __init__.py  annotator.py  factory.py  orchestrator.py
src/assbi/tracking/: __init__.py  centroid_tracker.py
src/assbi/training/: __init__.py  dataset.py  roboflow_sync.py  train.py
src/assbi/video/: __init__.py  opencv_source.py  simulation_source.py  youtube.py
tests/: test_analytics.py  test_geometry.py  test_line_counter.py  test_pipeline_e2e.py  test_privacy_and_export.py  test_tracker.py  test_youtube_cookies.py
