[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assbi"
version = "1.0.0"
description = "AI-Powered Smart Surveillance & Business Intelligence platform"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ASSBI Consortium" }]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
bi = ["pandas>=2.0", "streamlit>=1.30", "openpyxl>=3.1"]
cv = ["ultralytics>=8.1", "opencv-python>=4.8", "numpy>=1.24", "torch>=2.1"]
video = ["yt-dlp>=2024.1"]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]
all = [
    "pandas>=2.0", "streamlit>=1.30",
    "ultralytics>=8.1", "opencv-python>=4.8", "numpy>=1.24", "torch>=2.1",
    "yt-dlp>=2024.1",
]

[project.scripts]
assbi = "assbi.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
